# trawl

./: .editorconfig  .gitignore  .trawl.toml  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md
docs/: README.md  goal-tracker-compatibility.md  guidelines.md  requirements.md  syntax.md  writing-goals.md
docs/design/: architecture.md
src/: blame.rs  config.rs  lib.rs  main.rs  metadata.rs  model.rs  state.rs
src/parser/: goal.rs  inline.rs  mod.rs  resolve.rs
src/scanner/: mod.rs  reader.rs  walker.rs
src/tui/: filter.rs  goals.rs  inline_view.rs  mod.rs  search.rs
tests/: goal.rs  hierarchy.rs  inline.rs  references.rs  scanner.rs
tests/fixtures/goal/: example.md  plain-bullets.md  ref-broken.md  ref-cycle-a.md  ref-cycle-b.md  ref-mdlink.md  ref-target.md  ref-wikilink.md  subsections.md
tests/fixtures/inline/: forms.c  notes.md  quoted.rs
