[package]
name = "trawl"
version = "0.1.0"
edition = "2021"
description = "TODO Repository Annotation Work List — discover and visualize work items embedded in a repository"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
ignore = "0.4"
rayon = "1"
globset = "0.4"
regex = "1"
git2 = "0.19"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
